[package]
name = "run-sh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name  = "run_sh"
path = "src/run_sh.rs"

[[bin]]
name  = "mycli"
path = "src/mycli.rs"

[dependencies]
clap = "4.4.6"
anyhow = "1"
assert_cmd = "2"
serde = { version = "1.0.189", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
