[project]
name = "tg-sai-session-generator"
version = "0.1.0"
description = "Standalone Telegram session string generator for tg-sai"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.0",
    "qrcode>=8.2",
    "telethon>=1.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
python_files = [
    "*_test.py",
]
